--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -11,55 +11,10 @@ services:
       - "--name=nats1"
       - "--cluster_name=c1"
       - "--cluster=nats://nats1:6222"
-      - "--routes=nats-route://nats1:6222,nats-route://nats2:6222,nats-route://nats3:6222"
+      - "--routes=nats-route://nats1:6222"
       - "--http_port=8222"
       - "--js"
       - "--sd=/data"
-
-  nats2:
-    image: docker.io/nats:2.10-alpine
-    ports:
-      - "4223:4222"
-      - "8223:8222"
-    volumes:
-      - './data/nats/2:/data'
-    command:
-      - "--name=nats2"
-      - "--cluster_name=c1"
-      - "--cluster=nats://nats2:6222"
-      - "--routes=nats-route://nats1:6222,nats-route://nats2:6222,nats-route://nats3:6222"
-      - "--http_port=8222"
-      - "--js"
-      - "--sd=/data"
-
-  nats3:
-    image: docker.io/nats:2.10-alpine
-    ports:
-      - "4224:4222"
-      - "8224:8222"
-    volumes:
-      - './data/nats/3:/data'
-    command:
-      - "--name=nats3"
-      - "--cluster_name=c1"
-      - "--cluster=nats://nats3:6222"
-      - "--routes=nats-route://nats1:6222,nats-route://nats2:6222,nats-route://nats3:6222"
-      - "--http_port=8222"
-      - "--js"
-      - "--sd=/data"
-
-  localstack:
-    container_name: "${LOCALSTACK_DOCKER_NAME:-localstack-main}"
-    image: localstack/localstack
-    ports:
-      - "127.0.0.1:4566:4566"            # LocalStack Gateway
-      - "127.0.0.1:4510-4559:4510-4559"  # external services port range
-    environment:
-      # LocalStack configuration: https://docs.localstack.cloud/references/configuration/
-      - DEBUG=${DEBUG:-0}
-    volumes:
-      - "./data/localstack:/var/lib/localstack"
-      - "/var/run/docker.sock:/var/run/docker.sock"
 
   cerbos:
     image: ghcr.io/cerbos/cerbos:0.37.0
@@ -95,47 +50,4 @@ services:
 #      POSTGRES_DB: supertokens
     volumes:
       - './data/postgres:/var/lib/postgresql/data'
-
-  grafana:
-    image: grafana/grafana:latest
-    container_name: grafana
-    ports:
-      - "3000:3000"
-    depends_on:
-      - prometheus
-      - tempo
-      - loki
-      - pyroscope
-
-  prometheus:
-    image: prom/prometheus:latest
-    container_name: prometheus
-    ports:
-      - "9090:9090"
-    volumes:
-      - './config/prometheus.yml:/etc/prometheus/prometheus.yml'
-      - './data/prometheus:/prometheus'
-
-  tempo:
-    image: grafana/tempo:latest
-    container_name: tempo
-    ports:
-      - "3200:3200"
-    volumes:
-      - './data/tempo:/var/tempo'
-      - './config/tempo-config.yaml:/etc/tempo/tempo.yaml'
-    command: [ "-config.file=/etc/tempo/tempo.yaml" ]
-
-  loki:
-    image: grafana/loki:latest
-    container_name: loki
-    ports:
-      - "3100:3100"
-
-  pyroscope:
-    image: pyroscope/pyroscope:latest
-    container_name: pyroscope
-    ports:
-      - "4040:4040"
-    command: ["server"]
 
