Create .cerbos-hub.yaml and update docker-compose.yml
Added a .cerbos-hub.yaml file to the repository to configure Cerbos Cloud settings. Updated the docker-compose.yml to correct the volume path for the 'policy' directory.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - '3593:3593'
       - '3592:3592'
     volumes:
-      - ../src/sal/policy:/policies
+      - ../policy:/policies
 
   supertokens:
     image: registry.supertokens.io/supertokens/supertokens-postgresql:latest
