--- a/website/package.json
+++ b/website/package.json
@@ -10,10 +10,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-context-menu": "^2.2.1",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-hover-card": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-menubar": "^1.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-popover": "^1.1.1",
@@ -32,20 +36,25 @@
     "@t3-oss/env-nextjs": "^0.10.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "geist": "^1.3.0",
-    "lucide-react": "^0.408.0",
+    "lucide-react": "^0.416.0",
     "next": "^14.2.4",
     "next-themes": "^0.3.0",
     "nextjs-cors": "^2.2.0",
+    "posthog-js": "^1.150.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.52.1",
+    "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "supertokens-auth-react": "^0.44.0",
     "supertokens-node": "^19.0.0",
     "supertokens-web-js": "^0.13.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.3"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
