--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,19 +19,24 @@
     "@faker-js/faker": "^7.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "18.15.11",
     "@types/react": "^18.2.53",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "10.4.14",
     "chart.js": "^4.3.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.1.0",
     "next": "^14.1.0",
     "postcss": "8.4.33",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "supertokens-auth-react": "^0.45.0",
+    "supertokens-node": "^20.0.0",
     "tailwindcss": "3.3.1",
     "turbowatch": "^2.29.4",
-    "typescript": "5.0.4",
+    "typescript": "5.5.4",
     "zustand": "^4.3.7"
   },
   "devDependencies": {
