Add NATS and JetStream integration with new Docker setup
Integrated NATS and JetStream into the application with necessary configurations in the API service and Docker Compose. Updated dependencies to include necessary packages, and added a go.sum and .golangci.yml for checksum and linting configurations.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -11,7 +11,23 @@ services:
       - "--name=nats1"
       - "--cluster_name=c1"
       - "--cluster=nats://nats1:6222"
-      - "--routes=nats-route://nats1:6222"
+      - "--routes=nats-route://nats1:6222,nats-route://nats2:6222"
+      - "--http_port=8222"
+      - "--js"
+      - "--sd=/data"
+
+  nats2:
+    image: docker.io/nats:2.10-alpine
+    ports:
+      - "4223:4222"
+      - "8223:8222"
+    volumes:
+      - './data/nats/2:/data'
+    command:
+      - "--name=nats2"
+      - "--cluster_name=c1"
+      - "--cluster=nats://nats2:6222"
+      - "--routes=nats-route://nats1:6222,nats-route://nats2:6222"
       - "--http_port=8222"
       - "--js"
       - "--sd=/data"
