--- a/website/package.json
+++ b/website/package.json
@@ -47,6 +47,7 @@
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.52.1",
+    "react-resizable-panels": "^2.1.2",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "supertokens-auth-react": "^0.44.0",
