--- a/website/package.json
+++ b/website/package.json
@@ -36,7 +36,7 @@
     "@t3-oss/env-nextjs": "^0.10.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
+    "cmdk": "1.0.0",
     "geist": "^1.3.0",
     "lucide-react": "^0.437.0",
     "next": "^14.2.7",
@@ -48,6 +48,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.52.1",
     "react-resizable-panels": "^2.1.2",
+    "react-timezone-select": "^3.2.7",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "supertokens-auth-react": "^0.44.0",
