--- a/website/package.json
+++ b/website/package.json
@@ -36,6 +36,7 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-table": "^8.20.5",
+    "@xyflow/react": "^12.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
