--- a/website/package.json
+++ b/website/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "doc": "npm i -g fern-api && fern upgrade && fern docs dev"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
