--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -101,42 +101,70 @@ services:
       - '8013:8013'
       - '8016:8016'
 
-# monitoring
   grafana:
-    image: grafana/grafana:latest
-    container_name: grafana
+    image: grafana/grafana:11.0.0
+    volumes:
+      - ./config/grafana-datasources.yaml:/etc/grafana/provisioning/datasources/datasources.yaml
+    environment:
+      # TODO: make grafana require sign in when done testing
+      - GF_AUTH_ANONYMOUS_ENABLED=true
+      - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+      - GF_AUTH_DISABLE_LOGIN_FORM=true
+      - GF_FEATURE_TOGGLES_ENABLE=traceqlEditor
     ports:
-      - "3050:3000"
+      - "3000:3000"
     depends_on:
       - prometheus
       - tempo
       - loki
       - pyroscope
 
+
   prometheus:
     image: prom/prometheus:latest
-    container_name: prometheus
+    command:
+      - --config.file=/etc/prometheus.yaml
+      - --web.enable-remote-write-receiver
+      - --enable-feature=exemplar-storage
+      - --enable-feature=native-histograms
+    volumes:
+      - ./config/prometheus.yml:/etc/prometheus.yaml
     ports:
       - "9090:9090"
+
+
+  init:
+    image: &tempoImage grafana/tempo:latest
+    user: root
+    entrypoint:
+      - "chown"
+      - "10001:10001"
+      - "/var/tempo"
     volumes:
-      - './config/prometheus.yml:/etc/prometheus/prometheus.yml'
-      - './data/prometheus:/prometheus'
+      - ./tempo-data:/var/tempo
 
   tempo:
-    image: grafana/tempo:latest
-    container_name: tempo
-    ports:
-      - "3200:3200"
+    image: *tempoImage
+    command: [ "-config.file=/etc/tempo.yaml" ]
     volumes:
-      - './data/tempo:/var/tempo'
-      - './config/tempo-config.yaml:/etc/tempo/tempo.yaml'
-    command: [ "-config.file=/etc/tempo/tempo.yaml" ]
+      - ./config/tempo-config.yaml:/etc/tempo.yaml
+      - ./tempo-data:/var/tempo
+    ports:
+      - "14268"  # jaeger ingest
+      - "3200"   # tempo
+      - "4317"  # otlp grpc
+      - "4318"  # otlp http
+      - "9411"   # zipkin
+    depends_on:
+      - init
 
   loki:
-    image: grafana/loki:latest
+    image: grafana/loki:3.1.1
     container_name: loki
     ports:
       - "3100:3100"
+    volumes:
+      - './config/loki-config.yaml:/etc/loki/loki-config.yaml'
 
   pyroscope:
     image: pyroscope/pyroscope:latest
@@ -144,3 +172,19 @@ services:
     ports:
       - "4040:4040"
     command: ["server"]
+
+  # Generate fake traces TODO: OBVIOUSLY remove in production
+#  k6-tracing:
+#    image: ghcr.io/grafana/xk6-client-tracing:v0.0.5
+#    environment:
+#      - ENDPOINT=otel-collector:4317
+#    restart: always
+#    depends_on:
+#      - otel-collector
+
+
+  otel-collector:
+    image: otel/opentelemetry-collector:0.86.0
+    command: [ "--config=/etc/otel-collector.yaml" ]
+    volumes:
+      - './config/otel-collector-config.yaml:/etc/otel-collector.yaml'
