Add Kubernetes secrets and Prometheus setup examples
Added a Kubernetes secret example for Grafana Cloud integration and a Prometheus configuration for remote write. This enhances monitoring setup by providing templates for secrets management and Prometheus server configuration, facilitating easier deployment in Kubernetes environments.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Custom
 
+deployments/kubernetes/setup/0-monitoring/secrets.yaml
 docker/data
 
 # Created by https://www.toptal.com/developers/gitignore/api/macos,linux,windows,rust,rust-analyzer,jetbrains+iml,go
