Refactor build processes and update pathType in Helm
Split build pipelines into separate steps for API and worker. Commented out unused architectures, added internal dependencies in go.mod, and changed pathType in Helm values from ImplementationSpecific to http.

--- a/deployments/kubernetes/helm/autoscaler/values.yaml
+++ b/deployments/kubernetes/helm/autoscaler/values.yaml
@@ -67,7 +67,7 @@ ingress:
     - host: chart-example.local
       paths:
         - path: /
-          pathType: ImplementationSpecific
+          pathType: http
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
