Switch to GitHub Container Registry for Docker images
Updated the Earthfile to push images to ghcr.io instead of DockerHub. Adjusted GitHub Actions workflow to use GitHub Container Registry credentials for authentication.

--- a/.github/workflows/on-trunk-merge.yml
+++ b/.github/workflows/on-trunk-merge.yml
@@ -10,8 +10,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+      GH_DOCKER_USERNAME: ${{ secrets.GH_DOCKER_USERNAME }}
+      GH_DOCKER_TOKEN: ${{ secrets.GH_DOCKER_TOKEN }}
       FORCE_COLOR: 1
     steps:
       - uses: earthly/actions-setup@v1
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Docker Login
-        run: docker login --username "$DOCKERHUB_USERNAME" --password "$DOCKERHUB_TOKEN"
+        run: docker login ghcr.io --username "$GH_DOCKER_USERNAME" --password "$GH_DOCKER_TOKEN"
 
       - name: Run build
         run: earthly --ci --push +build-all-images
