Rename CI workflow and add manual trigger
Updated the workflow name to "On Merge MAIN" to better reflect its purpose, and included a `workflow_dispatch` trigger to allow manual runs for increased flexibility in testing changes. This helps in maintaining clarity and functionality of CI operations.

--- a/.github/workflows/on-trunk-merge.yml
+++ b/.github/workflows/on-trunk-merge.yml
@@ -1,10 +1,11 @@
 # .github/workflows/ci.yml
 
-name: Earthly +build
+name: On Merge MAIN
 
 on:
   push:
     branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   build:
