--- a/.github/workflows/on-trunk-merge.yml
+++ b/.github/workflows/on-trunk-merge.yml
@@ -15,9 +15,17 @@ jobs:
       GH_DOCKER_TOKEN: ${{ secrets.GH_DOCKER_TOKEN }}
       FORCE_COLOR: 1
     steps:
+      - name: Set up QEMU
+        id: qemu
+        uses: docker/setup-qemu-action@v1
+        with:
+          image: tonistiigi/binfmt:latest
+          platforms: all
+
       - uses: earthly/actions-setup@v1
         with:
           version: v0.8.0
+          github-token: $GH_DOCKER_TOKEN
 
       - uses: actions/checkout@v4
 
