--- a/.github/workflows/on-trunk-merge.yml
+++ b/.github/workflows/on-trunk-merge.yml
@@ -11,6 +11,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
+      EARTHLY_TOKEN: ${{ secrets.EARTHLY_TOKEN }}
       GH_DOCKER_USERNAME: ${{ secrets.GH_DOCKER_USERNAME }}
       GH_DOCKER_TOKEN: ${{ secrets.GH_DOCKER_TOKEN }}
       FORCE_COLOR: 1
@@ -33,4 +34,4 @@ jobs:
         run: docker login ghcr.io --username "$GH_DOCKER_USERNAME" --password "$GH_DOCKER_TOKEN"
 
       - name: Run build
-        run: earthly --ci --push +build-all-images
+        run: earthly --org bearbinary --ci --push +build-all-images
