Update Earthly command to include satellite build option
Add the --sat s1 option to the Earthly build command in the GitHub Actions workflow. This ensures that the builds are mirrored correctly to the specified satellite server.

--- a/.github/workflows/on-trunk-merge.yml
+++ b/.github/workflows/on-trunk-merge.yml
@@ -34,4 +34,4 @@ jobs:
         run: docker login ghcr.io --username "$GH_DOCKER_USERNAME" --password "$GH_DOCKER_TOKEN"
 
       - name: Run build
-        run: earthly --org bearbinary --ci --push +build-all-images
+        run: earthly --org bearbinary --sat s1 --ci --push +build-all-images
