Expand platform support and disable QEMU setup action
Added support for additional platforms (linux/arm/v7, linux/ppc64le, linux/s390x) in Earthfile builds. Disabled the QEMU setup step in the GitHub actions workflow. This should streamline the build process and expand compatibility.

--- a/.github/workflows/on-trunk-merge.yml
+++ b/.github/workflows/on-trunk-merge.yml
@@ -16,12 +16,12 @@ jobs:
       GH_DOCKER_TOKEN: ${{ secrets.GH_DOCKER_TOKEN }}
       FORCE_COLOR: 1
     steps:
-      - name: Set up QEMU
-        id: qemu
-        uses: docker/setup-qemu-action@v1
-        with:
-          image: tonistiigi/binfmt:latest
-          platforms: all
+#      - name: Set up QEMU
+#        id: qemu
+#        uses: docker/setup-qemu-action@v1
+#        with:
+#          image: tonistiigi/binfmt:latest
+#          platforms: all
 
       - uses: earthly/actions-setup@v1
         with:
