Refactor Helm chart structure and update configurations
Reorganized the Helm chart by splitting large templates into smaller, service-specific files for maintainability. Introduced global configuration defaults and added configurations for web, API, and worker services, each with its own specifications for autoscaling, node selection, and ingresses.

--- a/deployments/kubernetes/helm/autoscaler/templates/api/ingress.yaml
+++ b/deployments/kubernetes/helm/autoscaler/templates/api/ingress.yaml
@@ -1,21 +1,21 @@
-{{- if .Values.ingress.enabled }}
+{{- if .Values.api.ingress.enabled }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ include "mychart.fullname" . }}
+  name: {{ include "mychart.fullname" . }}-api
   labels:
     app: {{ include "mychart.name" . }}
     chart: {{ include "mychart.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
   annotations:
-    {{- range $key, $value := .Values.ingress.annotations }}
+    {{- range $key, $value := .Values.api.ingress.annotations }}
     {{ $key }}: {{ $value | quote }}
     {{- end }}
 spec:
-  ingressClassName: {{ .Values.ingress.className | quote }}
+  ingressClassName: {{ .Values.api.ingress.className | quote }}
   rules:
-    {{- range .Values.ingress.hosts }}
+    {{- range .Values.api.ingress.hosts }}
     - host: {{ .host | quote }}
       http:
         paths:
@@ -24,14 +24,14 @@ spec:
             pathType: {{ .pathType | quote }}
             backend:
               service:
-                name: {{ .serviceName }}
+                name: {{ include "mychart.fullname" . }}-api
                 port:
-                  number: {{ .servicePort }}
+                  number: {{ $.Values.api.service.port }}
           {{- end }}
     {{- end }}
-  {{- if .Values.ingress.tls }}
+  {{- if .Values.api.ingress.tls }}
   tls:
-    {{- range .Values.ingress.tls }}
+    {{- range .Values.api.ingress.tls }}
     - secretName: {{ .secretName }}
       hosts:
         {{- range .hosts }}
