--- a/deployments/kubernetes/helm/autoscaler/values.yaml
+++ b/deployments/kubernetes/helm/autoscaler/values.yaml
@@ -1,126 +1,183 @@
-# Default values for autoscaler.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
+# Global configurations that apply to all services.
+global:
+  replicaCount: 1
+  image:
+    repository: nginx
+    pullPolicy: IfNotPresent
+    tag: ""
+  imagePullSecrets: []
+  nameOverride: ""
+  fullnameOverride: ""
+  serviceAccount:
+    create: true
+    automount: true
+    annotations: {}
+    name: ""
+  podAnnotations: {}
+  podLabels: {}
+  podSecurityContext: {}
+  securityContext: {}
+  resources: {}
+  livenessProbe:
+    httpGet:
+      path: /
+      port: http
+  readinessProbe:
+    httpGet:
+      path: /
+      port: http
+  volumes: []
+  volumeMounts: []
+  nodeSelector: {}  # Default global nodeSelector, services can override
+  tolerations: []   # Default global tolerations, services can override
+  affinity: {}      # Default global affinity, services can override
+  ingress:
+    enabled: false  # Default is to disable Ingress
+    className: nginx  # Define your Ingress class (e.g., NGINX or Traefik)
+    annotations: { }  # Optional annotations for the Ingress resource
+    hosts:
+      - host: example.com
+        paths:
+          - path: /api
+            pathType: Prefix
+            serviceName: api-service
+            servicePort: 5000
+          - path: /web
+            pathType: Prefix
+            serviceName: webapp-service
+            servicePort: 8080
+    tls: # Optional TLS configuration
+      - secretName: tls-secret
+        hosts:
+          - example.com
 
-# This will set the replicaset count more information can be found here: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/
-replicaCount: 1
 
-# This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
-image:
-  repository: nginx
-  # This sets the pull policy for images.
-  pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+# Configuration specific to the web application service.
+web:
+  enabled: true
+  replicaCount: 2
+  image:
+    repository: ghcr.io/autoscalerhq/web
+    tag: "latest"
+  service:
+    type: ClusterIP
+    port: 8080
+  ingress:
+    enabled: false
+    className: "nginx"
+    annotations: {}
+    hosts:
+      - host: webapp.example.com
+        paths:
+          - path: /
+            pathType: Prefix
+    tls: []
+  autoscaling:
+    enabled: true
+    minReplicas: 2
+    maxReplicas: 10
+    targetCPUUtilizationPercentage: 70
 
-# This is for the secretes for pulling an image from a private repository more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
-imagePullSecrets: []
-# This is to override the chart name.
-nameOverride: ""
-fullnameOverride: ""
+  # Webapp specific nodeSelector, tolerations, and affinity settings.
+  nodeSelector:
+    app: webapp
+    environment: production
+  tolerations:
+    - key: "webapp-role"
+      operator: "Equal"
+      value: "frontend"
+      effect: "NoSchedule"
+  affinity:
+    podAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        - labelSelector:
+            matchExpressions:
+              - key: app
+                operator: In
+                values:
+                  - webapp
+          topologyKey: "kubernetes.io/hostname"
 
-# This section builds out the service account more information can be found here: https://kubernetes.io/docs/concepts/security/service-accounts/
-serviceAccount:
-  # Specifies whether a service account should be created
-  create: true
-  # Automatically mount a ServiceAccount's API credentials?
-  automount: true
-  # Annotations to add to the service account
-  annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
-  name: ""
+# Configuration specific to the API service.
+api:
+  enabled: true
+  replicaCount: 3
+  image:
+    repository: ghcr.io/autoscalerhq/api
+    tag: "latest"
+  service:
+    type: ClusterIP
+    port: 5000
+  ingress:
+    enabled: false
+    className: "nginx"
+    annotations: {}
+    hosts:
+      - host: api.example.com
+        paths:
+          - path: /
+            pathType: Prefix
+    tls: []
+  autoscaling:
+    enabled: true
+    minReplicas: 1
+    maxReplicas: 5
+    targetCPUUtilizationPercentage: 75
 
-# This is for setting Kubernetes Annotations to a Pod.
-# For more information checkout: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/
-podAnnotations: {}
-# This is for setting Kubernetes Labels to a Pod.
-# For more information checkout: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
-podLabels: {}
+  # API specific nodeSelector, tolerations, and affinity settings.
+  nodeSelector:
+    app: api
+    environment: staging
+  tolerations:
+    - key: "api-role"
+      operator: "Equal"
+      value: "backend"
+      effect: "NoSchedule"
+  affinity:
+    nodeAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        nodeSelectorTerms:
+          - matchExpressions:
+              - key: kubernetes.io/e2e-az-name
+                operator: In
+                values:
+                  - e2e-az1
+                  - e2e-az2
 
-podSecurityContext: {}
-  # fsGroup: 2000
+# Configuration specific to the worker service.
+worker:
+  enabled: true
+  replicaCount: 1
+  image:
+    repository: ghcr.io/autoscalerhq/worker
+    tag: "latest"
+  serviceAccount:
+    create: true
+    automount: true
+  autoscaling:
+    enabled: false
 
-securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
-
-# This is for setting up a service more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/
-service:
-  # This sets the service type more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services-service-types
-  type: ClusterIP
-  # This sets the ports more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#field-spec-ports
-  port: 80
-
-# This block is for setting up the ingress for more information can be found here: https://kubernetes.io/docs/concepts/services-networking/ingress/
-ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: http
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
-
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
-
-# This is to setup the liveness and readiness probes more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
-livenessProbe:
-  httpGet:
-    path: /
-    port: http
-readinessProbe:
-  httpGet:
-    path: /
-    port: http
-
-# This section is for setting up autoscaling more information can be found here: https://kubernetes.io/docs/concepts/workloads/autoscaling/
-autoscaling:
-  enabled: false
-  minReplicas: 1
-  maxReplicas: 100
-  targetCPUUtilizationPercentage: 80
-  # targetMemoryUtilizationPercentage: 80
-
-# Additional volumes on the output Deployment definition.
-volumes: []
-# - name: foo
-#   secret:
-#     secretName: mysecret
-#     optional: false
-
-# Additional volumeMounts on the output Deployment definition.
-volumeMounts: []
-# - name: foo
-#   mountPath: "/etc/foo"
-#   readOnly: true
-
-nodeSelector: {}
-
-tolerations: []
-
-affinity: {}
+  # Worker specific nodeSelector, tolerations, and affinity settings.
+  nodeSelector:
+    app: worker
+    environment: production
+  tolerations:
+    - key: "worker-role"
+      operator: "Equal"
+      value: "batch"
+      effect: "NoExecute"
+  affinity:
+    podAntiAffinity:
+      preferredDuringSchedulingIgnoredDuringExecution:
+        - weight: 100
+          podAffinityTerm:
+            labelSelector:
+              matchExpressions:
+                - key: app
+                  operator: In
+                  values:
+                    - worker
+            topologyKey: "kubernetes.io/hostname"
 
 postgresql:
   enabled: true # Set too false to use your own postgresql instance
